fix text getting cropped off on cards at homepage

--- a/assets/styles/theme/section.scss
+++ b/assets/styles/theme/section.scss
@@ -549,7 +549,7 @@
 .discover-nsm {
     .card {
         @media (min-width:992px) {
-            height: 330px;       
+            height: 360px;       
         }
     }
 }
